basic test passing

--- a/force-app/main/default/classes/vy_Coordinator.cls
+++ b/force-app/main/default/classes/vy_Coordinator.cls
@@ -64,43 +64,28 @@ global with sharing class vy_Coordinator {
     global static vy_Formation getNextFormation ( vy_Formation currentFormation ) {
 
         List < Vyuha_Formation__mdt > formations;
+        vy_Formation returnFormation = new vy_Formation ();
 
         if ( Test.isRunningTest() ) {
-            formations = [ SELECT DeveloperName FROM Vyuha_Formation_mdt WHERE Is_Test__c = TRUE ORDER BY Order__c ];
+            formations = [ SELECT DeveloperName FROM Vyuha_Formation__mdt WHERE Is_Test__c = TRUE ORDER BY Order__c ];
         } else {
-            formations = [ SELECT DeveloperName FROM Vyuha_Formation_mdt WHERE Active__c = TRUE AND Is_Test__c = FALSE ORDER BY Order__c ];
-        }
-
-        if ( formations.size () == 0 ) {
-            // no formations to run, return null
-            return null;
+            formations = [ SELECT DeveloperName FROM Vyuha_Formation__mdt WHERE Active__c = TRUE AND Is_Test__c = FALSE ORDER BY Order__c ];
         }
 
         string nextFormationName = '';
-
-        if ( currentFormation.getName () == null ) {
-            // this is an empty Formation, just return the first record
-            nextFormationName = formations[0].DeveloperName;
-        } else {
-            boolean foundCurrent = false;
-            for ( Vyuha_Formation__mdt formation : formations ) {
-                if ( foundCurrent ) {
-                    nextFormationName = formation.DeveloperName;
-                    break;
-                }
-                if ( formation.DeveloperName == currentFormation.getName () ) {
-                    foundCurrent = true;
-                }
+        
+        boolean foundCurrent = false;
+        for ( Vyuha_Formation__mdt formation : formations ) {
+            if ( foundCurrent ) {
+                nextFormationName = formation.DeveloperName;
+                break;
+            }
+            if ( formation.DeveloperName == currentFormation.getName () ) {
+                foundCurrent = true;
             }
         }
 
-        if ( nextFormationName == '' ) {
-            // we were at the last one already - nothing left, return null
-            return null;
-        }
-
         // load the formation and return
-        vy_Formation returnFormation = new vy_Formation ();
         returnFormation.load ( nextFormationName );
         return returnFormation;
 
