--- a/force-app/main/default/classes/vy_CoordinatorFactory.cls
+++ b/force-app/main/default/classes/vy_CoordinatorFactory.cls
@@ -1,15 +1,13 @@
 global with sharing class vy_CoordinatorFactory implements Schedulable {
 
-    vy_Coordinator coordinator;
-
     global vy_CoordinatorFactory ( ) {
-        this.coordinator = new vy_Coordinator ();
+        
     }
 
     // method to start off formations
     global void execute ( SchedulableContext sc ) {
         
-        vy_Formation formation = coordinator.getNextFormation ( new vy_Formation ());
+        vy_Formation formation = vy_Coordinator.getNextFormation ( new vy_Formation ());
         formation.launch ();
 
     }
