--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -7,13 +7,20 @@ global with sharing class vy_Formation {
     global String flowInterviewName;
     global Boolean isValid;
     global Integer batchSize;
+    global integer recordsProcessed;
+
+    private string notificationEmailAddresses;
+    private integer errorCount;
+    private string errorMessage;
 
     global vy_Formation () {
         this.soqlStatement = '';
         this.flowInterviewName = '';
-        isValid = false;
-        name = '';
-        system.debug ('vy_Formation.constructor () ' + this );
+        this.isValid = false;
+        this.name = '';
+        this.errorCount = 0;
+        this.errorMessage = '';
+        this.recordsProcessed = 0;
     }
 
     global boolean load ( String formationName ) {
@@ -24,6 +31,7 @@ global with sharing class vy_Formation {
         fields.add ( 'Active__c' );
         fields.add ( 'Batch_Size__c' );
         fields.add ( 'Soql_Statement__c' );
+        fields.add ( 'Notification_Email__c' );
 
         // build soql statement
         string soql = 'SELECT ';
@@ -51,8 +59,9 @@ global with sharing class vy_Formation {
         this.flowInterviewName = (string) formationRecords[0].get ( 'Flow_Name__c' );
         this.batchSize = Integer.valueOf ( (decimal) formationRecords[0].get ( 'Batch_Size__c' ));
         this.soqlStatement = (string) formationRecords[0].get ( 'Soql_Statement__c' );
+        this.notificationEmailAddresses = (string) formationRecords[0].get ( 'Notification_Email__c' );
         this.isValid = true;
-        
+
         return true;
     }
 
@@ -84,26 +93,61 @@ global with sharing class vy_Formation {
     }
 
     global Boolean executeFlow ( List < sObject > recordsToProcess ) {
-        // convert records to list of ID
-        List < String > idsToProcess = new List < String > ();
-
+        // iterate through records to process, passing into a Flow Interview
         for ( sObject sObj : recordsToProcess ) {
-            idsToProcess.add ( (String) sObj.get ('id'));
+            String inputId = (String) sObj.get ('id');
+            // convert the IDs into a Map structure for input into flow
+            Map < String, String > inputMap = new Map < String, String > ();
+            inputMap.put ( 'inputID', inputId );
+            vy_Coordinator.debugOutput ( 'vy_Formation::executeFlow', 'inputMap', inputMap );
+            vy_Coordinator.debugOutput ( 'vy_Formation::executeFlow', 'Flow', this.flowInterviewName );
+
+            // TODO: error handling 
+            // invoke the associated Flow
+            Flow.Interview jobFlow = Flow.Interview.CreateInterview ( this.flowInterviewName, inputMap );
+            jobFlow.start ();
         }
-
-        // convert the IDs into a Map structure for input into flow
-        Map < String, List < String >> inputMap = new Map < String, List < String >> ();
-        inputMap.put ( 'inputIDs', idsToProcess );
-
-        System.debug ( '==== FlowInterface.JobLogic.executeBatch == inputMap : ' + inputMap );
-        System.debug ( '==== FlowInterface.JobLogic.executeBatch == Flow : ' + this.flowInterviewName );
-
-        // TODO: error handling 
-        // invoke the associated Flow
-        Flow.Interview jobFlow = Flow.Interview.CreateInterview ( this.flowInterviewName, inputMap );
-        jobFlow.start ();
 
         return true; // return false if execute fails
     }
+
+    global void addError ( String stage, String message ) {
+        this.errorCount++;
+        this.errorMessage = this.errorMessage + '\n' + '(Formation: ' + this.name + ') Error #' + String.valueOf ( this.errorCount ) + ' ------\n' +'Stage: ' + stage + '\n' + 'Message: ' + message + '\n';
+    }
+
+    global void complete () {
+        // send email notifications
+        sendNotificationEmail ();
+
+    }
+
+    private void sendNotificationEmail ( ) {
+
+        string[] toaddress;
+        if ( this.notificationEmailAddresses != null ) {
+            toaddress = ( this.notificationEmailAddresses ).split('[;,\n)]');
+        } else {
+            return;
+        }
+
+        string dateString = System.now().format('EEEE, MMMM d, yyyy hh:mm a');
+
+        string body = 'Job Complete for ' + this.name + ' - ' + dateString + '\n\n';
+        body += 'Total Records Processed ' + this.recordsProcessed + '\n';
+        body += 'Total Errors: ' + this.errorCount + '\n';
+        if ( this.errorCount > 0 ) {
+            body += '==== Errors ===== \n' + this.errorMessage;
+        }
+
+        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+        mail.setToAddresses(toaddress);
+        mail.setsubject( 'Salesforce Automated Formation Job Processing Report ' + dateString );
+        mail.setPlainTextBody(body);
+        
+        // send the email.
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
+
+		}
 
 }
